--- a/public/cuteVue/init/view.html
+++ b/public/cuteVue/init/view.html
@@ -124,6 +124,13 @@
                 cv-model="MAIL_FROM"
                 :rules="this.mailRule"
                 />
+
+                <text-input
+                type="password"
+                placeholder="clé api du service mail"
+                cv-model="MAIL_PASSWORD"
+                :rules="this.apiKeyRule"
+                />
             </div>
             
             <div class="mt-[50px] text-center">
@@ -230,6 +237,7 @@
             MAIL_HOST: "",
             MAIL_PORT: "",
             MAIL_FROM: "",
+            MAIL_PASSWORD: "",
 
             firstname: "",
             lastname: "",
@@ -267,6 +275,10 @@
                 (value) => value === "" ? "Ce champ est obligatoire" : true,
                 (value) => value.length < 2 ? "Ce champ doit contenir au moins 2 caractères" : true,
                 (value) => value.length > 5 ? "Ce champ ne doit pas contenir plus de 5 caractères" : true
+            ],
+
+            apiKeyRule: [
+                (value) => !value || value.length >= 3 || "La clé api doit faire au moins 3 caractères"
             ],
 
             passwordRule: [
@@ -431,6 +443,7 @@
                             MAIL_HOST: this.MAIL_HOST,
                             MAIL_PORT: this.MAIL_PORT,
                             MAIL_FROM: this.MAIL_FROM,
+                            MAIL_PASSWORD: this.MAIL_PASSWORD,
 
                             firstname: this.firstname,
                             lastname: this.lastname,
